--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <p class="instruction-text"><!-- Replace these images with our real photos --></p>
             <div class="photo-grid">
                 <!-- Placeholders: Replace src with actual image paths -->
-                <div class="photo-card"><img src="photo1.jpg" alt="Memory 1"></div>
-                <div class="photo-card"><img src="photo2.jpg" alt="Memory 2"></div>
+                <div class="photo-card"><img src="" alt="Memory 1"></div>
+                <div class="photo-card"><img src="" alt="Memory 2"></div>
                     
             </div>
         </div>
